# mmo-packman

./: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.client.json  tsconfig.server.json  vite.config.ts
.github/workflows/: ci.yml
config/: game_rules.json
docs/: README.md  ai_test_play.md  aoi_metrics.md  architecture.md  deployment_cloud_run.md  game_design.md  local_development.md  mvp_scope.md  operation_notes.md  parity_harness.md  replay_timelapse.md  rust_server_reimplementation.md  server_protocol.md  ts_server_archive.md
reference/ts-server/: README.md  package-lock.json  package.json
rust/server/: Cargo.toml
rust/server/src/: constants.rs  engine.rs  lib.rs  ping_manager.rs  ranking_store.rs  rng.rs  server_protocol.rs  server_utils.rs  types.rs  world.rs
rust/server/src/engine/: mod.rs  sector_system.rs  spawn_system.rs  utils.rs
scripts/: generate-game-rules.mjs  generate-game-rules.selftest.mjs
src/client/: main.ts  network.selftest.ts  network.ts  parseServerMessage.selftest.ts  parseServerMessage.ts  renderer.ts  replay_model.ts  replay_parser.selftest.ts  replay_parser.ts  state.selftest.ts  state.ts  styles.css  ui.ts
src/server/: game.selftest.ts  game.ts  game_rules.selftest.ts  game_rules.ts  gate_utils.selftest.ts  gate_utils.ts  helpers.ts  index.ts  loop.selftest.ts  loop.ts  message_parser.selftest.ts  message_parser.ts  parity_harness.selftest.ts  reconnect.selftest.ts  session_manager.selftest.ts  session_manager.ts  simulate.ts  world.ts
src/shared/: constants.ts  types.ts
(+87 files in other folders)
