[package]
name = "mmo-packman-rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws", "json"] }
clap = { version = "4.5.31", features = ["derive"] }
futures-util = "0.3.31"
rand = "0.9.2"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
